[package]
name = "rust-ez-dbus"
version = "0.12.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD"
description = """
Convenience wrappers for exposing a D-Bus interface.
"""

[dependencies]
dbus-serialize = "~0.1.1"

[dependencies.dbus-bytestream]
git = "https://github.com/srwalter/dbus-bytestream.git"

[dependencies.machine-id]
git = "https://github.com/mathstuf/rust-machine-id"

[lib]
name = "ez_dbus"
path = "src/lib.rs"
